# burn-probability-model

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
cluster/: config.template.yaml  load_config.sh  monitor_jobs.sh  submit_pipeline.sh
cluster/jobs/: 01_download_data.slurm  02_preprocess.slurm  03_simulate.slurm  04_merge.slurm  05_validate.slurm
config/: __init__.py  data_sources.yaml  fuel_models.yaml  pilot_config.yaml  production_config.yaml  settings.py
docs/: CLUSTER_DEPLOYMENT.md  comparison_open_climate_risk.md  model_methodology.md
scripts/: create_synthetic_data.py  download_gridmet.py  download_ms_buildings.py  download_pilot_data.py  download_sonoma_county.py  run_conditional_monte_carlo.py  run_monte_carlo.py  run_tile_simulation.py  submit_hpc_job.sh  test_flammap.py  train_ignition_model.py  validate_results.py
src/: __init__.py
src/data_acquisition/: __init__.py  fire_history.py  infrastructure.py  landfire.py  parcels.py  terrain.py  weather.py
src/ignition/: __init__.py  feature_engineering.py  models.py  train.py
src/integration/: __init__.py  monte_carlo.py  parcel_aggregation.py  weather_scenarios.py
src/preprocessing/: __init__.py  feature_creation.py  landscape_prep.py  raster_alignment.py
src/spread/: __init__.py  flammap_wrapper.py  landscape_builder.py  weather_streams.py
src/validation/: __init__.py  fire_holdout.py  hindcast.py  metrics.py
tests/: __init__.py  test_ignition_model.py  test_landscape.py  test_validation.py
